Update login pages.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
